syntax = "proto3";

package api.product.v1;
option go_package = "/internal/adapter/grpc/product/v1;productv1";

import "api/proto/messages/product_create.proto";
import "api/proto/messages/product_update.proto";
import "api/proto/messages/product_delete.proto";
import "api/proto/messages/product_get.proto";
import "api/proto/messages/product_list.proto";

service ProductService {
    rpc CreateProduct(messages.ProductCreateRequest) returns (messages.ProductCreateResponse) {}
    rpc UpdateProduct(messages.ProductUpdateRequest) returns (messages.ProductUpdateResponse) {}
    rpc DeleteProduct(messages.ProductDeleteRequest) returns (messages.ProductDeleteResponse) {}

    rpc GetProductById(messages.ProductGetRequest) returns (messages.ProductGetResponse) {}
    rpc GetProducts(messages.ProductListRequest) returns (messages.ProductListResponse) {}
}

